# bevy_asset_loader

bevy_asset_loader/: Cargo.toml
bevy_asset_loader/src/: lib.rs
